objects/asb_App__c.object
<CustomObject><fields>
        <fullName>AppType__c</fullName>
        <description>The type of application.</description>
        <inlineHelpText>The type of application.</inlineHelpText>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Android</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>iOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Categories__c</fullName>
        <description>The categories in which the app is included in the store.</description>
        <inlineHelpText>The categories in which the app is included in the store.</inlineHelpText>
        <label>Categories</label>
        <picklist>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CustomerService</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HumanResources</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ERP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collaboration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>DefaultListing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default listing is shown to users whose language setting doesn't match any language-specific listing for the app.</description>
        <inlineHelpText>The default listing is shown to users whose language setting doesn't match any language-specific listing for the app.</inlineHelpText>
        <label>Default Listing</label>
        <referenceTo>asb_Listing__c</referenceTo>
        <relationshipLabel>Apps</relationshipLabel>
        <relationshipName>Apps</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>FirstListedDate__c</fullName>
        <description>The date of the first published listing for the app.</description>
        <inlineHelpText>The date of the first published listing for the app.</inlineHelpText>
        <label>First Listed Date</label>
        <summarizedField>asb_Listing__c.ListedDate__c</summarizedField>
        <summaryFilterItems>
            <field>asb_Listing__c.Status__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </summaryFilterItems>
        <summaryForeignKey>asb_Listing__c.asb_App__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>InstallUrl__c</fullName>
        <description>Install Url</description>
        <inlineHelpText>Install Url</inlineHelpText>
        <label>Install URL</label>
        <type>Url</type>
    </fields><fields>
        <fullName>Languages__c</fullName>
        <description>The languages that the app supports.</description>
        <inlineHelpText>The languages that the app supports.</inlineHelpText>
        <label>Languages</label>
        <picklist>
            <picklistValues>
                <fullName>da</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>de</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>en_US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>es</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fr</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>it</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ja</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ko</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>nl_NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pt_BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ru</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>sv</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>th</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>zh_TW</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields><fields>
        <fullName>LiveListings__c</fullName>
        <description>The number of listings for the app that are published and available in the store.</description>
        <inlineHelpText>The number of listings for the app that are published and available in the store.</inlineHelpText>
        <label>Published Listings</label>
        <summaryFilterItems>
            <field>asb_Listing__c.Status__c</field>
            <operation>equals</operation>
            <value>Live</value>
        </summaryFilterItems>
        <summaryForeignKey>asb_Listing__c.asb_App__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>LogoUrl__c</fullName>
        <description>Logo Image URL</description>
        <inlineHelpText>Logo Image URL</inlineHelpText>
        <label>LogoUrl</label>
        <type>Url</type>
    </fields><fields>
        <fullName>PageViewsAllTime__c</fullName>
        <description>The number of page views for the app for all time.</description>
        <inlineHelpText>The number of page views for the app for all time.</inlineHelpText>
        <label>Page Views (All Time)</label>
        <summarizedField>asb_Listing__c.PageViewsAllTime__c</summarizedField>
        <summaryForeignKey>asb_Listing__c.asb_App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>PageViews__c</fullName>
        <description>The number of page views for the app in the last 30 days.</description>
        <inlineHelpText>The number of page views for the app in the last 30 days.</inlineHelpText>
        <label>Page Views</label>
        <summarizedField>asb_Listing__c.PageViews__c</summarizedField>
        <summaryForeignKey>asb_Listing__c.asb_App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>PopularityAllTime__c</fullName>
        <description>Popularity by requests/installs (dependent on app type) for all time.</description>
        <inlineHelpText>Popularity by requests/installs (dependent on app type) for all time.</inlineHelpText>
        <label>Installs</label>
        <summarizedField>asb_Listing__c.PopularityAllTime__c</summarizedField>
        <summaryForeignKey>asb_Listing__c.asb_App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Popularity__c</fullName>
        <description>Popularity by requests/installs (dependent on app type) for last 30 days.</description>
        <inlineHelpText>Popularity by requests/installs (dependent on app type) for last 30 days.</inlineHelpText>
        <label>Popularity (30 Days)</label>
        <summarizedField>asb_Listing__c.Popularity__c</summarizedField>
        <summaryForeignKey>asb_Listing__c.asb_App__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields><fields>
        <fullName>Status__c</fullName>
        <description>Publication status of the app: if it has any published listings it is published, otherwise hidden.</description>
        <formula>IF(LiveListings__c &gt; 0,  $Label.asb_Published, $Label.asb_Hidden)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Publication status of the app: if it has any published listings it is published, otherwise hidden.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields><fields>
        <fullName>Store__c</fullName>
        <description>The store in which the app is listed.</description>
        <inlineHelpText>The store in which the app is listed.</inlineHelpText>
        <label>Store</label>
        <referenceTo>asb_Store__c</referenceTo>
        <relationshipLabel>Apps</relationshipLabel>
        <relationshipName>Apps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Indicates if the app is available in the store and included in the administrator's activities.</description>
        <inlineHelpText>Indicates if the app is available in the store and included in the administrator's activities.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>An app that is listed in one or more languages in the store.</description><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>true</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>App</label><nameField>
        <label>App Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Apps</pluralLabel><sharingModel>ControlledByParent</sharingModel><startsWith>Vowel</startsWith><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>